#22 generation of mumators logic

--- a/internal/pkg/generator/tmpl/octopus/main.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/main.tmpl
@@ -22,16 +22,29 @@ import (
 )
 {{ $pkgName := .ARPkg }}
 {{ $serializers := .Serializers -}}
+{{ $mutators := .Mutators -}}
 {{ $PublicStructName := .ARPkgTitle -}}
 {{ $LinkedObject := .LinkedObject }}
 {{ $flags := .Flags }}
 {{ $fields := .FieldList }}
 {{ $procfields := .ProcOutFieldList }}
 {{ $procInLen := len .ProcInFieldList }}
+{{ $mutatorLen := len .Mutators }}
+
+    {{ if ne $mutatorLen 0 -}}
+    type Mutators struct {
+    {{- range $i, $mut := $mutators }}
+        {{$mut.Name}}    octopus.MutatorField
+    {{- end }}
+    }
+    {{ end -}}
 
 {{ if $fields }}
     type {{ $PublicStructName }} struct {
         octopus.BaseField
+        {{ if ne $mutatorLen 0 -}}
+        Mutators
+        {{- end -}}
     {{- range $ind, $fstruct := .FieldList -}}
         {{ $rtype := $fstruct.Format -}}
         {{ $serlen := len $fstruct.Serializer -}}
@@ -324,6 +337,17 @@ func New(ctx context.Context) *{{ $PublicStructName }} {
 	newObj.BaseField.ExtraFields = [][]byte{}
 	newObj.BaseField.Objects = map[string][]octopus.ModelStruct{}
     {{ end }}
+    {{- if ne $mutatorLen 0 -}}
+    {{- range $i, $mut := $mutators }}
+    newObj.{{$mut.Name}}.PartialFields = map[string]any{}
+    {{ if ne $mut.Update "" -}}
+    newObj.{{$mut.Name}}.OpFunc = map[octopus.OpCode]string{octopus.OpUpdate: "{{$mut.Update}}"}
+    {{ end }}
+    {{ if ne $mut.Replace "" -}}
+    newObj.{{$mut.Name}}.OpFunc = map[octopus.OpCode]string{octopus.OpInsert: "{{$mut.Replace}}"}
+    {{ end }}
+    {{- end }}
+    {{ end -}}
 	return &newObj
 }
 
@@ -537,6 +561,16 @@ func (obj *{{ $PublicStructName }}) Set{{ $fstruct.Name }}({{ $fstruct.Name }} {
 	{{- end }}
 
 	obj.BaseField.UpdateOps = append(obj.BaseField.UpdateOps, octopus.Ops{Field: {{ $ind }}, Op: octopus.OpSet, Value: data})
+
+    {{- range $i, $mut := $fstruct.Mutators -}}
+    {{ $customMutator := index $mutators $mut -}}
+    {{ $pfLen := len $customMutator.PartialFields }}
+    {{ if and (eq $pfLen 0) (ne $customMutator.Update "") $customMutator.Name }}
+    data = octopus.PackLua("{{$customMutator.Update}}", obj.PrimaryString(), {{ $fstruct.Name}})
+    obj.BaseField.UpdateOps = append(obj.BaseField.UpdateOps, octopus.Ops{Field: {{ $ind }}, Op: octopus.OpUpdate, Value: data})
+    {{ end }}
+    {{ end }}
+
 	obj.field{{ $fstruct.Name }} = {{ $fstruct.Name}}
 
 	{{- if ne $fstruct.ObjectLink "" }}
@@ -546,6 +580,68 @@ func (obj *{{ $PublicStructName }}) Set{{ $fstruct.Name }}({{ $fstruct.Name }} {
 	return nil
 }
 	{{- range $i, $mut := $fstruct.Mutators -}}
+    {{ $customMutator := index $mutators $mut -}}
+    {{ $pfLen := len $customMutator.PartialFields }}
+	{{- if $customMutator.Name }}
+
+    {{ if ne $pfLen 0 }}
+func (obj *{{ $PublicStructName }}) pack{{ $fstruct.Name }}PartialFields(op octopus.OpCode) error {
+    pfs := obj.Mutators.{{ $customMutator.Name }}.PartialFields
+	if len(pfs) == 0 {
+		return nil
+	}
+
+    var (
+            mutatorArgs []string
+            err error
+        )
+
+	switch op {
+    {{ if ne $customMutator.Update "" -}}
+    case octopus.OpUpdate:
+        mutatorArgs, err = {{ $customMutator.ImportName }}.{{ $PublicStructName }}{{ $customMutator.Name }}Update(obj.field{{ $fstruct.Name }}, pfs)
+    {{ end }}
+    {{ if ne $customMutator.Replace "" -}}
+    case octopus.OpInsert:
+        mutatorArgs, err = {{ $customMutator.ImportName }}.{{ $PublicStructName }}{{ $customMutator.Name }}Replace(obj.field{{ $fstruct.Name }}, pfs)
+    {{ end }}
+	}
+
+	if err != nil {
+		return err
+	}
+
+    data := octopus.PackLua(obj.Mutators.{{ $customMutator.Name }}.OpFunc[op], append([]string{obj.PrimaryString()}, mutatorArgs...)...)
+
+	{{- if eq $fstruct.Format "string" "[]byte" -}}
+		{{- if gt $fstruct.Size 0 }}
+
+	if len(data) > {{ $fstruct.Size }} {
+		return fmt.Errorf("max length of field '{{ $PublicStructName }}.{{ $fstruct.Name }}' is '%d' (received '%d')", {{ $fstruct.Size }}, len(data))
+	}
+		{{- else }}
+
+	logger := activerecord.Logger()
+
+	logger.Warn(context.TODO(), "{{ $PublicStructName }}", obj.PrimaryString(), fmt.Sprintf("Size for field '{{ $fstruct.Name }}' not set. Cur field size: %d. Object: '{{ $PublicStructName }}'", len(data)))
+		{{- end }}
+	{{- end }}
+
+    obj.BaseField.UpdateOps = append(obj.BaseField.UpdateOps, octopus.Ops{Field: {{ $ind }}, Op: octopus.OpSet, Value: data})
+
+    return nil
+}
+        {{ end }}
+
+	    {{ range $i, $f := $customMutator.PartialFields }}
+
+func (obj *{{ $PublicStructName }}) Set{{ $customMutator.Name }}{{ $f.Name }}({{ $f.Name }} {{ $f.Type }}) error {
+    obj.Mutators.{{ $customMutator.Name }}.PartialFields["{{ $f.Name }}"] = {{ $f.Name }}
+
+    return nil
+}
+        {{ end }}
+	{{else}}
 		{{ $mutatorparam := mutatorParam $mut $fstruct.Format -}}
 		{{ $mtype := $fstruct.Format }}
 
@@ -636,7 +732,7 @@ func (obj *{{ $PublicStructName }}) Is{{ $fstruct.Name }}{{ $flag }}() bool {
 }
 		{{- end }}
 	{{- end }}
-
+{{- end }}
 {{ end -}}
 
 {{ if $fields }}
