--- a/internal/pkg/generator/tmpl/octopus/fixturestore.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/fixturestore.tmpl
@@ -27,6 +27,8 @@ import (
 {{ $procInLen := len .ProcInFieldList }}
 {{ $typePK := "" -}}
 {{ $fieldNamePK := "" -}}
+{{ $mutators := .Mutators -}}
+{{ $mutatorLen := len .Mutators }}
 
 {{ if $procfields }}
 {{ $typePK := "string" -}}
@@ -182,6 +184,22 @@ func GetUpdate{{$PublicStructName}}FixtureBy{{ $fieldNamePK }}(ctx context.Conte
 
     return octopus.CreateUpdateFixture(obj.MockUpdate(ctx), wrappedTrigger), promiseIsUsed
 }
+
+{{ if ne $mutatorLen 0 -}}
+func GetUpdateMutator{{$PublicStructName}}FixtureBy{{ $fieldNamePK }}(ctx context.Context, {{ $fieldNamePK }} {{$typePK}}) (fxts []octopus.FixtureType) {
+    obj := GetUpdate{{$PublicStructName}}By{{$fieldNamePK}}({{ $fieldNamePK }})
+
+    for _, req := range obj.MockMutatorUpdate(ctx) {
+        ft, _ := octopus.CreateCallFixture(
+            func(wsubME []octopus.MockEntities) []byte {
+                return req
+            }, nil)
+        fxts = append(fxts, ft)
+    }
+
+    return fxts
+}
+{{end}}
 
 {{ range $_, $mockOperation := split "Insert,Replace,InsertOrReplace" "," }}
 func Get{{ $mockOperation }}{{$PublicStructName}}FixtureBy{{ $fieldNamePK }}(ctx context.Context, {{ $fieldNamePK }} {{ $typePK }}, trigger func([]octopus.FixtureType) []octopus.FixtureType) (fx octopus.FixtureType, promiseIsUsed func () bool) {
