--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -21,6 +21,8 @@ import (
 {{ $procInLen := len .ProcInFieldList }}
 {{ $serializers := .Serializers -}}
 {{ $fidx := .FieldMap }}
+{{ $mutators := .Mutators -}}
+{{ $mutatorLen := len .Mutators }}
 
 {{ if $procfields }}
 func (obj *{{ $PublicStructName }}) MockSelectResponse() ([][]byte, error) {
@@ -332,6 +334,28 @@ func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, erro
 	return data, err
 }
 
+{{ if ne $mutatorLen 0 -}}
+func (obj *{{ $PublicStructName }}) MockMutatorUpdate(ctx context.Context) [][]byte {
+	log := activerecord.Logger()
+	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockMutatorUpdate": obj.BaseField.UpdateOps, "Repo": "{{$PublicStructName}}" })
+
+	updateMutatorOps := make([][]byte, 0, len(obj.BaseField.UpdateOps))
+
+	for _, update := range obj.BaseField.UpdateOps {
+		switch update.Op {
+		case octopus.OpUpdate:
+			updateMutatorOps = append(updateMutatorOps, update.Value)
+		default:
+			continue
+		}
+	}
+
+	log.Debug(ctx, fmt.Sprintf("Update packed tuple: '%X'\n", updateMutatorOps))
+
+	return updateMutatorOps
+}
+{{end}}
+
 func (obj *{{ $PublicStructName }}) MockUpdate(ctx context.Context) []byte {
     log := activerecord.Logger()
     ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockUpdate": obj.BaseField.UpdateOps, "Repo": "{{$PublicStructName}}" })
@@ -344,7 +368,18 @@ func (obj *{{ $PublicStructName }}) MockUpdate(ctx context.Context) []byte {
         return nil
     }
 
-    w := octopus.PackUpdate(namespace, pk, obj.BaseField.UpdateOps)
+	updateOps := make([]octopus.Ops, 0, len(obj.BaseField.UpdateOps))
+
+	for _, update := range obj.BaseField.UpdateOps {
+		switch update.Op {
+		case octopus.OpUpdate:
+			continue
+		default:
+			updateOps = append(updateOps, update)
+		}
+	}
+
+	w := octopus.PackUpdate(namespace, pk, updateOps)
 
     log.Debug(ctx, fmt.Sprintf("Update packed tuple: '%X'\n", w))
 
