--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -334,14 +334,17 @@ func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, erro
 	return data, err
 }
 
-{{ if ne $mutatorLen 0 -}}
-func (obj *{{ $PublicStructName }}) MockMutatorUpdate(ctx context.Context) [][]byte {
+{{ range $ind, $fstruct := $fields -}}
+{{- range $i, $mut := $fstruct.Mutators -}}
+{{ $customMutator := index $mutators $mut -}}
+{{ if and (ne $customMutator.Update "") $customMutator.Name }}
+func (obj *{{ $PublicStructName }}) MockMutator{{$customMutator.Name}}Update(ctx context.Context) [][]byte {
 	log := activerecord.Logger()
-	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockMutatorUpdate": obj.BaseField.UpdateOps, "Repo": "{{$PublicStructName}}" })
+	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockMutator{{$customMutator.Name}}Update": obj.Mutators.{{ $customMutator.Name }}.UpdateOps, "Repo": "{{$PublicStructName}}" })
 
-	updateMutatorOps := make([][]byte, 0, len(obj.BaseField.UpdateOps))
+	updateMutatorOps := make([][]byte, 0, len(obj.Mutators.{{ $customMutator.Name }}.UpdateOps))
 
-	for _, update := range obj.BaseField.UpdateOps {
+	for _, update := range obj.Mutators.{{ $customMutator.Name }}.UpdateOps {
 		switch update.Op {
 		case octopus.OpUpdate:
 			updateMutatorOps = append(updateMutatorOps, update.Value)
@@ -350,10 +353,12 @@ func (obj *{{ $PublicStructName }}) MockMutatorUpdate(ctx context.Context) [][]b
 		}
 	}
 
-	log.Debug(ctx, fmt.Sprintf("Update packed tuple: '%X'\n", updateMutatorOps))
+	log.Debug(ctx, fmt.Sprintf("Update mutator packed tuple: '%X'\n", updateMutatorOps))
 
 	return updateMutatorOps
 }
+{{end}}
+{{end}}
 {{end}}
 
 func (obj *{{ $PublicStructName }}) MockUpdate(ctx context.Context) []byte {
