--- a/internal/pkg/generator/tmpl/octopus/fixturestore.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/fixturestore.tmpl
@@ -27,6 +27,8 @@ import (
 {{ $procInLen := len .ProcInFieldList }}
 {{ $typePK := "" -}}
 {{ $fieldNamePK := "" -}}
+{{ $mutators := .Mutators -}}
+{{ $mutatorLen := len .Mutators }}
 
 {{ if $procfields }}
 {{ $typePK := "string" -}}
@@ -182,6 +184,30 @@ func GetUpdate{{$PublicStructName}}FixtureBy{{ $fieldNamePK }}(ctx context.Conte
 
     return octopus.CreateUpdateFixture(obj.MockUpdate(ctx), wrappedTrigger), promiseIsUsed
 }
+
+{{ range $ind, $fstruct := $fields -}}
+{{- range $i, $mut := $fstruct.Mutators -}}
+{{ $customMutator := index $mutators $mut -}}
+{{ if and (ne $customMutator.Update "") $customMutator.Name }}
+// Нужно доработать, т.к. пока из файла репозитория фикстур update.yaml нельзя выборочно устанавливать значения частично обновляемого поля
+// Все неустановленные поля будут проинициализированы дефолтными значениями
+func GetUpdateMutator{{$customMutator.Name}}FixtureBy{{ $fieldNamePK }}(ctx context.Context, {{ $fieldNamePK }} {{$typePK}}) (fxt octopus.FixtureType) {
+    obj := GetUpdate{{$PublicStructName}}By{{$fieldNamePK}}({{ $fieldNamePK }})
+
+    for _, req := range obj.MockMutator{{$customMutator.Name}}Update(ctx) {
+        ft, _ := octopus.CreateCallFixture(
+            func(wsubME []octopus.MockEntities) []byte {
+                return req
+            }, nil)
+		// available only one
+        return ft
+    }
+
+    return
+}
+{{end}}
+{{end}}
+{{end}}
 
 {{ range $_, $mockOperation := split "Insert,Replace,InsertOrReplace" "," }}
 func Get{{ $mockOperation }}{{$PublicStructName}}FixtureBy{{ $fieldNamePK }}(ctx context.Context, {{ $fieldNamePK }} {{ $typePK }}, trigger func([]octopus.FixtureType) []octopus.FixtureType) (fx octopus.FixtureType, promiseIsUsed func () bool) {
