--- a/internal/pkg/generator/tmpl/octopus/mock.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/mock.tmpl
@@ -21,6 +21,8 @@ import (
 {{ $procInLen := len .ProcInFieldList }}
 {{ $serializers := .Serializers -}}
 {{ $fidx := .FieldMap }}
+{{ $mutators := .Mutators -}}
+{{ $mutatorLen := len .Mutators }}
 
 {{ if $procfields }}
 func (obj *{{ $PublicStructName }}) MockSelectResponse() ([][]byte, error) {
@@ -331,6 +333,33 @@ func (obj *{{ $PublicStructName }}) RepoSelector(ctx context.Context) (any, erro
 	}
 	return data, err
 }
+
+{{ range $ind, $fstruct := $fields -}}
+{{- range $i, $mut := $fstruct.Mutators -}}
+{{ $customMutator := index $mutators $mut -}}
+{{ if and (ne $customMutator.Update "") $customMutator.Name }}
+func (obj *{{ $PublicStructName }}) MockMutator{{$customMutator.Name}}Update(ctx context.Context) [][]byte {
+	log := activerecord.Logger()
+	ctx = log.SetLoggerValueToContext(ctx, map[string]interface{}{"MockMutator{{$customMutator.Name}}Update": obj.Mutators.{{ $customMutator.Name }}.UpdateOps, "Repo": "{{$PublicStructName}}" })
+
+	updateMutatorOps := make([][]byte, 0, len(obj.Mutators.{{ $customMutator.Name }}.UpdateOps))
+
+	for _, update := range obj.Mutators.{{ $customMutator.Name }}.UpdateOps {
+		switch update.Op {
+		case octopus.OpUpdate:
+			updateMutatorOps = append(updateMutatorOps, update.Value)
+		default:
+			continue
+		}
+	}
+
+	log.Debug(ctx, fmt.Sprintf("Update mutator packed tuple: '%X'\n", updateMutatorOps))
+
+	return updateMutatorOps
+}
+{{end}}
+{{end}}
+{{end}}
 
 func (obj *{{ $PublicStructName }}) MockUpdate(ctx context.Context) []byte {
     log := activerecord.Logger()
