--- a/internal/pkg/generator/tmpl/octopus/fixture.tmpl
+++ b/internal/pkg/generator/tmpl/octopus/fixture.tmpl
@@ -107,6 +107,22 @@ func UnmarshalFixtures(source []byte) []*{{$PublicStructName}} {
 
     return objs
 }
+
+func UnmarshalFixturesFromJSON(source []byte) ([]{{$PublicStructName}}FT, error) {
+	source = bytes.TrimLeft(source, " \t\r\n")
+
+	if  len(source) > 0 && source[0] == '{' {
+		source = []byte(fmt.Sprintf("[%s]", string(source)))
+	}
+
+	var v []{{$PublicStructName}}FT
+
+	if err := json.Unmarshal([]byte(source), &v); err != nil {
+		return nil, err
+	}
+
+	return v, nil
+}
 {{ end }}
 
 func (objs {{$PublicStructName}}List) String() string {
